# flask-pluginengine

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGES.rst  LICENSE  README.rst  all-requirements.txt  pytest.ini  setup.cfg  setup.py  tox.ini
.github/utils/: check_version.py
.github/workflows/: pypi.yml  tests.yml
docs/: Makefile  application.rst  conf.py  index.rst  plugin.rst
docs/source/: api.rst  conf.py  index.rst
docs/source/_templates/: sidebarintro.html  sidebarlogo.html
example/app/: app.py
example/app/templates/: base.html  index.html
example/plugin/: example_plugin.py  setup.py
example/plugin/templates/: index.html
flask_pluginengine/: __init__.py  _compat.py  engine.py  globals.py  mixins.py  patches.py  plugin.py  signals.py  templating.py  util.py
tests/: test_engine.py
tests/foobar_plugin/: foobar_plugin.py  setup.cfg
tests/templates/core/: base.txt  context.txt  macro.txt  nested_calls.txt  simple_macro.txt  simple_macro_extends.txt  simple_macro_extends_base.txt  test.txt
tests/templates/plugin/: context.txt  macro.txt  nested_calls.txt  simple_macro_extends.txt  simple_macro_extends_base.txt  super.txt  test.txt
