[metadata]
name = Flask-PluginEngine
version = attr: flask_pluginengine.__version__
description = A simple plugin system for Flask applications.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/indico/flask-pluginengine
license = BSD
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.8
install_requires =
    # TODO figure out the right minimum versions we need, or just
    # require the versions that dropped python 2 as well to encourage
    # people to use something recent..
    Flask
    Jinja2
    blinker
    importlib-metadata

[options.extras_require]
dev =
    pytest
    pytest-cov

[options.packages.find]
include =
    flask_pluginengine
    flask_pluginengine.*
